kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://sso.pipitonelabs.com/-/health/ready/
      conditions:
        - "[STATUS] == 204"
spec:
  hostnames: ["sso.pipitonelabs.com"]
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
